--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>git_orai_munka</title>
+    <title>Regisztrációs felület</title>
   </head>
   <body>
     <div id="app"></div>
@@ -20,7 +22,11 @@
   <label for="password">Password:</label><br>
   <input type="text" id="password" name="password"><br><br>
   <input type="submit" value="Submit">
-
   </form> 
+
+  <br>
+    
+  <footer class="text-center mt-5 py-3 bg-dark text-light">Készítette: Molnár Bence</footer>
+
   </body>
 </html>
