--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
   <input type="text" id="password" name="password" required><br><br>
   </div>
   
-  <input type="submit" value="Regisztráció">
+  <input type="submit" class="btn btn-primary w-100" value="Regisztráció">
   </form> 
 
+  <div id="successMessage" class="alert alert-success mt-3 d-none">
+      Sikeres regisztráció!
+  </div>
+  
   <br>
     
   <footer class="text-center mt-5 py-3 bg-dark text-light">Készítette: Molnár Bence</footer>
