javascript és néhány zöldesítés

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <input type="text" id="password" name="password" required><br><br>
   </div>
   
-  <input type="submit" class="btn btn-primary w-100" value="Regisztráció">
+  <input type="submit" class="btn btn-success w-100" value="Regisztráció">
   </form> 
 
   <div id="successMessage" class="alert alert-success mt-3 d-none">
@@ -38,7 +38,7 @@
   
   <br>
     
-  <footer class="text-center mt-5 py-3 bg-dark text-light">Készítette: Molnár Bence</footer>
+  <footer class="text-center mt-5 py-3 bg-success text-light">Készítette: Molnár Bence</footer>
 
   </body>
 </html>
